# hobot_trigger

./: README.md  README_cn.md
recorder_node/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
recorder_node/include/: recorder_node.h  util.h
recorder_node/launch/: hobot_recorder.launch.py
recorder_node/src/: main.cpp  recorder_node.cpp  util.cpp
trigger_node/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
trigger_node/include/: trigger_node.h
trigger_node/src/: trigger_node.cpp
trigger_node_example/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
trigger_node_example/config/: trigger_config.json
trigger_node_example/include/: trigger_example_node.h
trigger_node_example/launch/: hobot_trigger_example.launch.py
trigger_node_example/src/: main.cpp  trigger_example_node.cpp
